syntax = "proto3";

package telemetry.message.event;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.telemetry.event";


//Типы устройств
enum DeviceTypeProto {
    MOTION_SENSOR = 0;
    TEMPERATURE_SENSOR = 1;
    LIGHT_SENSOR = 2;
    CLIMATE_SENSOR = 3;
    SWITCH_SENSOR = 4;
}

//Типы условий для сценариев
enum ConditionTypeProto {
    MOTION = 0;
    LUMINOSITY = 1;
    SWITCH = 2;
    TEMPERATURE = 3;
    CO2LEVEL =4;
    HUMIDITY = 5;
}

//Операторы, допустимые для построения условий
enum ConditionOperationProto {
    EQUALS = 0;
    GREATER_THAN = 1;
    LOWER_THAN = 2;
}

//Типы действий
enum ActionTypeProto {
    ACTIVATE = 0;
    DEACTIVATE = 1;
    INVERSE = 2;
    SET_VALUE = 3;
}

//Событие добавления устройства
message DeviceAddedEventProto {
    string id = 1;
    DeviceTypeProto type = 2;
}

//Событие удаления устройства
message DeviceRemovedEventProto {
    string id = 1;
}

//Условия активации сценария
message ScenarioConditionProto {
    string sensor_id = 1;
    ConditionTypeProto type = 2;
    ConditionOperationProto operation = 3;
    oneof value {
        bool bool_value =  4;
        int32 int_value = 5;
    }
}

//Действия, выполняемые устройством в рамках сценария
message DeviceActionProto {
    string sensor_id = 1;
    ActionTypeProto type = 2;
    optional int32 value = 3;
}

//Событие добавления сценария
message ScenarioAddedEventProto {
    string name = 1;
    repeated ScenarioConditionProto condition = 2;
    repeated DeviceActionProto action = 3;
}

//Событие удаления сценария
message ScenarioRemovedEventProto {
    string name = 1;
}

//Событие, происходящее в хабе
message HubEventProto {
    string hub_id = 1;
    google.protobuf.Timestamp timestamp = 2;
    oneof payload {
        DeviceAddedEventProto device_added = 3;
        DeviceRemovedEventProto device_removed = 4;
        ScenarioAddedEventProto scenario_added = 5;
        ScenarioRemovedEventProto scenario_removed = 6;
    }
}
